# pyHKTs

./: .gitmodules  README.md  pyproject.toml
conformance/: test_1.py  test_2.py  test_3.py  test_self_param.py
docs/: README.md  examples.md  implementation.md  notes.md  scala.md  syntax.md  syntax.py
mypy_plugin/: plugin.py
scripts/: build_pyright.sh  run_pyright.sh
src/pyhkts/: _cli.py  _genericgenericalias.py  _typings.py
