[project]
name = "pyhkts"
version = "0.1.0"
description = "Higher Kinded Types for Python3"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["typing-extensions"]

[project.scripts]
pyright-local = "pyhkts._cli:pyright"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-memray>=1.8.0"]
lint = ["ruff>=0.15.9"]
typecheck = [
    "basedpyright",
    "mypy[mypyc]",
    "pyrefly>=0.59.1",
    "pyright>=1.1.408",
    "ty>=0.0.28",
    "zuban>=0.6.2",
]

[tool.mypy]
custom_typeshed_dir = "typeshed"
plugins = ["mypy_plugin/plugin.py"]
enable_incomplete_feature = ["TypeForm"]

[tool.pyright]
typeshedPath = "typeshed"

[tool.pyrefly]
typeshed-path = "typeshed"

[tool.ty.environment]
typeshed = "typeshed"

[tool.ruff]
format.preview = true

[tool.uv]
default-groups = "all"

[tool.uv.workspace]
members = ["typing_extensions", "mypy", "basedpyright"]

[tool.uv.sources]
typing-extensions = { workspace = true }
mypy = { workspace = true }
basedpyright = { workspace = true }
