[project]
name = "pyhkts"
version = "0.1.0"
description = "Higher Kinded Types for Python3"
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
requires-python = "==3.14.*"
dependencies = ["typing-extensions"]

[project.scripts]
pyright-local = "pyhkts._cli:pyright"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["rich>=15.0.0"]
test = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
lint = ["ruff>=0.15.10"]
typecheck = [
    "basedpyright",
    "mypy[mypyc]",
    "pyrefly>=0.61.0",
    "pyright>=1.1.408",
    "ty>=0.0.30",
    "zuban>=0.7.0",
]

[tool.mypy]
custom_typeshed_dir = "typeshed"
enable_incomplete_feature = ["TypeForm"]

[tool.pyright]
typeshedPath = "typeshed"

[tool.pyrefly]
typeshed-path = "typeshed"

[tool.ty.environment]
typeshed = "typeshed"

[tool.ruff]
format.preview = true

[tool.uv]
default-groups = "all"

[tool.uv.workspace]
members = ["typing_extensions", "mypy", "basedpyright"]

[tool.uv.sources]
typing-extensions = { workspace = true }
mypy = { workspace = true }
basedpyright = { workspace = true }
