[project]
name = "pyhkts"
version = "0.1.0"
description = "Higher Kinded Types for Python3"
readme = "README.md"
requires-python = "==3.14.*"  # The cpython build is currently for the 3.14 branch
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
dependencies = ["typing-extensions"]

[project.scripts]
pyright-local = "pyhkts._cli:pyright"  # Run the workspace version of pyright

[dependency-groups]
dev = ["rich>=15.0.0"]
lint = ["ruff>=0.15.12"]
test = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
typecheck = [
  # From workspace
  "basedpyright",
  "mypy[mypyc]",

  # From PyPI
  "pycroscope>=0.3.0",
  "pyrefly>=0.63.0",
  "pyright>=1.1.409",  # PyPI version of pyright
  "ty>=0.0.33",
  "zuban>=0.7.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

## Type checker configs

[tool.mypy]
custom_typeshed_dir = "typeshed"
enable_incomplete_feature = ["TypeForm"]

[tool.pyrefly]
typeshed-path = "typeshed"

[tool.pyright]
typeshedPath = "typeshed"

[tool.ruff]
format.preview = true

[tool.ty.environment]
typeshed = "typeshed"

## Workspace configs

[tool.uv]
default-groups = "all"

[tool.uv.workspace]
members = ["typing_extensions", "mypy", "basedpyright"]

[tool.uv.sources]
typing-extensions = { workspace = true }
mypy = { workspace = true }
basedpyright = { workspace = true }
